trying to fix upper right image on IE

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ h2.entry-title {
 #glory {
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 16px;
 	z-index: 999;
 }
 
